Changes with mod_fastcgi 2.2.7

 *) Tweak to Makefile.tmpl to support DSOs.  Dave Hill [ddhill@zk3.dec.com]

Changes with mod_fastcgi 2.2.6

 *) Shutdown the PM when Apache appears to have disappeared.

 *) seteuid() tweak for HP-UX 11.  Milton L. Hankins [mlh@swl.msd.ray.com]

 *) (Win32) More dynamic fixes.

 *) (Win32) Eliminate the per application named pipe mutex.  Its now 
    per process to keep the lib happy (the use _FCGI_MUTEX_ should
    removed from the lib).  This allows pipe-based applications to
    now handle multiple simoultanous requests (one per process).
 
 *) Increase the number of open FDs we look to close when spawning apps.

 *) Prevent an assert from popping unnecessarily.

 *) (Win32) Add support for interpretter scripts.

 *) (Win32) Fix named pipe handling (problems with large responses).

 *) (Win32) Remove the "can exec" check.

Changes with mod_fastcgi 2.2.4

 *) Beta WinNT support.  David Allen [djallen@raleigh.ibm.com] and 
    Rob Saccoccio [robs@chelsea.net]

 *) Remove request type restriction (GET and POST only) in order to support
    Web DAV requests.  Scott Robertson [sroberts@codeit.com] 

 *) Allow requests for URLs such as /server/some/other/qualifier to match a
    FastCGI server defined as /server.	This was done primarily for Java
	Servlets, but is generically useful.

 *) Change the comm between the PM and the request handlers from a regular
    file to a pipe and an assortment of other dynamic fixes.

 *) Log dynamic process termination scheduling and the resulting 
    process exit notification.

 *) Change the default singleThreshhold from 10 to 0 to prevent the last dynamic
    application process from being killed off due to low demand.

 *) Clean up FastCGI application pathnames (e.g. remove duplicate slashes). 
 
 *) Fix bugs that prevented dynamic processes from being shutdown when
    the load subsided.  Lars Heete [heete@do.isst.fhg.de]

 *) Prevent dynamic processes from being scheduled to be started before